# brain2text

./: .gitignore  README.md  __init__.py  pyproject.toml
src/: main.py
src/eval/: eval.py
