[project]
name = "brain2text"
version = "0.1.0"
description = "I can read your mind!!!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.12.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "tables>=3.10.1",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]

[dependency-groups]
dev = [
    "gpustat>=1.1.1",
    "icecream>=2.1.3",
]
